--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div id="lead-content">
             <h1>Sawan Damase</h1>
             <h2>E&TC Engineer</h2>
-            <a href="https://drive.google.com/file/d/1U-18_aJrnPQQFtmzp5Jqt9zFpLnDlWw-/view?usp=sharing" class="btn-rounded-white">(☞ﾟ Know More..!!!ﾟ)☞</a>
+            <a href=" https://drive.google.com/file/d/1yeFoFrxqSy_aEm90Bgo7KqbQPgB8KYLY/view?usp=sharing " class="btn-rounded-white">(☞ﾟ Know More..!!!ﾟ)☞</a>
         </div>
         <!-- End #lead-content -->
 
@@ -201,7 +201,22 @@
                         <p>
                           This text editor having various feature like cut, paste, find, replace, themes, open, save, save as with all font types. Some other features are text colour, status bar, hide menu bar.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/saavn03/Text-editor-using-python-and-tkinter-library ">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+		<div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/project.jpg" />
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3> Road lane detection for autonomous vehicle </h3>
+                        <p>
+                          This project is mainly for autonomous vehicle to detect lane to drive safely.This project made using open-cv and Algorithm used Canny edge and Hough transform to detect lane.
+                        </p>
+                        <a href=" https://github.com/saavn03/Road-lane-detection-for-autonomous-vehicle ">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
