--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        A passionate frontend developer and Ml enthusiast from India. My passion for software lies with dreaming up ideas and making them come true with elegant interfaces. I take great care in the experience, architecture, and code quality of the things I build. 
+                        A passionate E&TC Engineering student, frontend developer, Ml enthusiast and Learner from India. Who love to code. My passion for software lies with dreaming up ideas and making them come true with elegant interfaces and code. I take great care in the experience, architecture, and code quality of the things I build.I'm Eager 😈 to learn new stuff..!!!
                     </p>
                 </div>
             </div>
