--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                         <p>
                             So basically, this project is based on deep learning and use the CNN algorithm, mobilenet.ssd. We made 44 classes of hand gesture like alphabets, number and some phrases. For training we use google colab and testing we use jupyter notebook. Accuracy got around 98 %.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/saavn03/Hand-Gesture-recognition-using-CV-and-TensorFlow">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
